sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:3: error: not found: value getNumberValeurs
  for ( i <- 1 to getNumberValeurs()-1){
                  ^