sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for ( i <- 1 to getNumberValeurs()-1){
    while (plusPetit(i, i-1)){
      echange(i,i-1)
      i -= 1
    }
  }
}